Add docs for documents
-- Changes
- Add air for hot reload
- Fix some issues with the document handler and service
- Update the openapi docs
